[gd_scene load_steps=17 format=3 uid="uid://cmy7ncxw3us7"]

[ext_resource type="Script" path="res://all_scenes/menu_scenes/play_menu/track_menu/track_menu.gd" id="1_b6gl5"]
[ext_resource type="PackedScene" uid="uid://dprwqh7rftr0d" path="res://all_scenes/menu_scenes/bg_menu/bg_menu.tscn" id="2_4cpfy"]
[ext_resource type="Texture2D" uid="uid://dtwxi5aby2qyc" path="res://assets/others/Sprite-0001.png" id="3_ss0q4"]
[ext_resource type="PackedScene" uid="uid://cjr2dtt7ne5ve" path="res://all_scenes/objects_scenes/light_sc/lantern.tscn" id="4_uo8f7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o7y8i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_do6cv"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_au1b5"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4uakx"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ec6h1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3obny"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_okwy2"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2j7ej"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4be02"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jrdxk"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ronhf"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6v331"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Track_menu" type="CanvasLayer"]
script = ExtResource("1_b6gl5")

[node name="BgMenu" parent="." instance=ExtResource("2_4cpfy")]

[node name="mc_light" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="mc_light"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_constants/separation = 35

[node name="Sprite2D" type="Sprite2D" parent="mc_light/VBoxContainer"]
position = Vector2(0, -3.108)
scale = Vector2(4.68339, 0.908027)
texture = ExtResource("3_ss0q4")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="mc_light/VBoxContainer"]
position = Vector2(0, 53.8558)
scale = Vector2(4.68339, 0.908027)
texture = ExtResource("3_ss0q4")
centered = false

[node name="Sprite2D3" type="Sprite2D" parent="mc_light/VBoxContainer"]
position = Vector2(0, 109.523)
scale = Vector2(4.68339, 0.908027)
texture = ExtResource("3_ss0q4")
centered = false

[node name="01" type="Button" parent="mc_light/VBoxContainer"]
self_modulate = Color(0.898039, 0.0823529, 0.74902, 1)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_o7y8i")
theme_override_styles/hover = SubResource("StyleBoxFlat_do6cv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_au1b5")
theme_override_styles/normal = SubResource("StyleBoxFlat_4uakx")
text = "01"

[node name="Lantern" parent="mc_light/VBoxContainer/01" instance=ExtResource("4_uo8f7")]
position = Vector2(150, 11)
scale = Vector2(12.5, 4.25)

[node name="Hot" type="Button" parent="mc_light/VBoxContainer"]
self_modulate = Color(0.898039, 0.0823529, 0.74902, 1)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ec6h1")
theme_override_styles/hover = SubResource("StyleBoxFlat_3obny")
theme_override_styles/pressed = SubResource("StyleBoxFlat_okwy2")
theme_override_styles/normal = SubResource("StyleBoxFlat_2j7ej")
text = "Hot"

[node name="Lantern" parent="mc_light/VBoxContainer/Hot" instance=ExtResource("4_uo8f7")]
position = Vector2(150, 11)
scale = Vector2(12.5, 4.25)

[node name="Council_Pyramid" type="Button" parent="mc_light/VBoxContainer"]
self_modulate = Color(0.898039, 0.0823529, 0.74902, 1)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_4be02")
theme_override_styles/hover = SubResource("StyleBoxFlat_jrdxk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ronhf")
theme_override_styles/normal = SubResource("StyleBoxFlat_6v331")
text = "Council Pyramid"

[node name="Lantern" parent="mc_light/VBoxContainer/Council_Pyramid" instance=ExtResource("4_uo8f7")]
position = Vector2(150, 11)
scale = Vector2(12.5, 4.25)

[node name="mc_medium" type="MarginContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="mc_medium"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_constants/separation = 35

[node name="Track1" type="Button" parent="mc_medium/VBoxContainer"]
self_modulate = Color(0.898039, 0.0823529, 0.74902, 1)
layout_mode = 2
text = "None"

[node name="Track2" type="Button" parent="mc_medium/VBoxContainer"]
self_modulate = Color(0.898039, 0.0823529, 0.74902, 1)
layout_mode = 2
text = "None"

[node name="mc_heavy" type="MarginContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="mc_heavy"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_constants/separation = 35

[node name="Track1" type="Button" parent="mc_heavy/VBoxContainer"]
self_modulate = Color(0.898039, 0.0823529, 0.74902, 1)
layout_mode = 2
text = "None"

[node name="Track2" type="Button" parent="mc_heavy/VBoxContainer"]
self_modulate = Color(0.898039, 0.0823529, 0.74902, 1)
layout_mode = 2
text = "None"

[connection signal="pressed" from="mc_light/VBoxContainer/01" to="." method="_on_test_track_pressed"]
[connection signal="pressed" from="mc_light/VBoxContainer/Hot" to="." method="_on_hot_pressed"]
[connection signal="pressed" from="mc_light/VBoxContainer/Council_Pyramid" to="." method="_on_council_pyramid_pressed"]
